--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "vue": "^3.2.25",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "postcss-px2vp": "^1.1.4",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.9.0"
   }
 }
