--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.12",
     "postcss-px2vp": "^1.1.4",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
