--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-px2vp": "^1.1.4",
     "tailwindcss": "^3.0.23",
     "vite": "^2.9.0",
-    "vite-plugin-imagemin": "^0.6.1"
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
