--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "howler": "^2.2.3",
     "vue": "^3.2.25",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
@@ -19,6 +21,7 @@
     "postcss-px2vp": "^1.1.4",
     "tailwindcss": "^3.0.23",
     "vite": "^2.9.0",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-svg-icons": "^2.0.1"
   }
