--- a/package.json
+++ b/package.json
@@ -7,37 +7,37 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --mode staging",
-    "lint": "pnpm exec eslint --ext .js,.vue --fix src"
+    "lint": "eslint --ext .js,.vue --fix src"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@iconify/iconify": "^3.0.1",
-    "@iconify/vue": "^4.0.2",
-    "axios": "^1.2.1",
+    "@iconify/iconify": "^3.1.0",
+    "@iconify/vue": "^4.1.0",
+    "axios": "^1.3.3",
     "dayjs": "^1.11.7",
-    "pinia": "^2.0.28",
+    "pinia": "^2.0.30",
     "qs": "^6.11.0",
-    "vant": "^4.0.4",
-    "vue": "^3.2.45",
+    "vant": "^4.0.10",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.30.0",
+    "eslint": "^8.34.0",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-vue": "^9.8.0",
-    "postcss": "^8.4.20",
+    "eslint-plugin-vue": "^9.9.0",
+    "postcss": "^8.4.21",
     "postcss-px2vp": "^1.1.4",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4",
-    "unplugin-auto-import": "^0.12.1",
+    "sass": "^1.58.2",
+    "tailwindcss": "^3.2.7",
+    "unplugin-auto-import": "^0.14.3",
     "unplugin-icons": "^0.14.15",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.3",
-    "vite-plugin-mkcert": "^1.10.1",
+    "vite": "^4.1.1",
+    "vite-plugin-mkcert": "^1.13.1",
     "vite-plugin-svg-icons": "^2.0.1"
   }
 }
