--- a/package.json
+++ b/package.json
@@ -10,20 +10,37 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
+    "pinia": "^2.0.33",
+    "qs": "^6.11.1",
+    "vant": "^4.1.2",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
+  },
   "devDependencies": {
     "@iconify/json": "^2.2.44",
     "@iconify/tailwind": "^0.1.2",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.1.0",
+    "eruda": "^3.0.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-vue": "^9.10.0",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^8.3.0",
     "postcss-px2vp": "^1.1.4",
+    "sass": "^1.60.0",
     "tailwindcss": "^3.3.1",
-    "vite": "^4.2.1"
-  },
-  "dependencies": {
-    "pinia": "^2.0.33",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "unplugin-auto-import": "^0.15.2",
+    "unplugin-icons": "^0.16.1",
+    "unplugin-imagemin": "^0.3.12",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.2.1",
+    "vite-plugin-mkcert": "^1.14.0",
+    "vite-plugin-obfuscator": "^1.0.5",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
