--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "qs": "^6.11.1",
     "vant": "^4.1.2",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "wx~v1.2.0": "npm:weixin-js-sdk@1.2.0",
+    "wx~v1.6.0": "npm:weixin-js-sdk@1.6.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.44",
