--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,16 @@
 VITE_BASE='./'
 
+# drop all console under production
 VITE_DROP_CONSOLE=false
 
-VITE_SOURCEMAP=true
+# generate sourcemap for project
+VITE_SOURCEMAP=false
 
+# uglify js code
 VITE_UGLIFY=false
 
+# for old
 VITE_LEGACY=true
 
-VITE_ERUDA=true
+# mobile develop tool <ERUDA>
+VITE_ERUDA=false
