--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,6 @@ VITE_HTTPS=true
 VITE_OPEN=false
 
 # example: VITE_PROXY='{'/api': 'https://api.example.com', '/api2': 'https://api2.example.com'}'
-VITE_PROXY='{}'
+VITE_PROXY='{"/weixin": "https://dev.pannacloud.com/weixin"}'
 
 VITE_ERUDA=false
